--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -80,7 +80,7 @@
                     <group>
                         <group>
                             <field name="patient_id" />
-                            <field name="ref" />
+                            <field name="ref" readonly="1" force_save="1"/>
                             <field name="doctor_id" widget="many2one_avatar_user"/>
                             <field name="gender" />
                             <field name="hide_sale_price" groups="base.group_no_one"/>
