Added many2many_checkboxes for Patient tags

--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -40,8 +40,8 @@
                         </group>
                         <group>
                             <field name="gender" invisible="context.get('hide_gender')" widget="radio"/>
-                            <!-- Tag color  -->
-                            <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                            <!-- Tag color : widget="many2many_tags" to checkboxes -->
+                            <field name="tag_ids" widget="many2many_checkboxes" options="{'color_field': 'color'}"/>
                             <!-- Archive -->
                             <field name="active" invisible="1"/>
                             <field name="appointment_count" />
