Added widget selection for Appointment's Patient

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -79,7 +79,8 @@
                     </div>
                     <group>
                         <group>
-                            <field name="patient_id" />
+                            <field name="patient_id" widget="selection"/>
+                            <!-- Force save for readonly -->
                             <field name="ref" readonly="1" force_save="1"/>
                             <field name="doctor_id" widget="many2one_avatar_user"/>
                             <field name="gender" />
