--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -8,11 +8,10 @@
             <tree export_xlsx="0">
                 <field name="name" string="Patient Name"/>
                 <field name="date_of_birth" />
-                <field name="age" />
-                <field name="ref" />
+                <field name="age" avg="Average Age"/>
+                <field name="appointment_count" sum="Total Appointments"/>
                 <field name="gender" />
                 <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
-                <field name="appointment_id" />
             </tree>
             </field>
         </record>
