Added reference field in Operation model and view

--- a/custom_addons/om_hospital/views/operation_view.xml
+++ b/custom_addons/om_hospital/views/operation_view.xml
@@ -21,6 +21,7 @@
                         <group>
                             <field name="doctor_id" />
                             <field name="operation_name" />
+                            <field name="reference_record" />
                         </group>
                     </group>
                 </sheet>
