--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -22,6 +22,14 @@
             <field name="arch" type="xml">
             <form>
                 <sheet>
+                <div class="alert alert-success text-center o_form_header" attrs="{'invisible': [('is_birthday', '!=', True)]}" role="alert">
+                        <a class="close" data-dismiss="alert" href="#" aria-label="Close"><i title="Close" class="small fa fa-times"/></a>
+                        <div>
+                            <strong>Today is Birthday !:</strong>
+                        </div>
+                        <div> Wish <field name="name" readonly="1"/>
+                        </div>
+                     </div>
                     <field name="image" widget="image" class="oe_avatar" />
                     <div class="oe_title">
                         <h4>
@@ -36,6 +44,7 @@
                         <group>
                             <field name="date_of_birth" />
                             <field name="age" />
+                            <field name="is_birthday" />
                         </group>
                         <group>
                             <field name="gender" invisible="context.get('hide_gender')" widget="radio"/>
