--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -36,7 +36,6 @@
                             <field name="ref" readonly="1"/>
                         </h4>
                         <h2>
-                            <label for="name" string="Name" class="oe_edit_only" />
                             <field name="name" />
                         </h2>
                     </div>
@@ -54,14 +53,19 @@
                             <field name="active" invisible="1"/>
                             <field name="appointment_count" />
                         </group>
-                        <group string="Other Information" name="other_info">
-                            <group>
-                                <!-- Field required and invisible based on age with condition -->
-                                <field name="parent" attrs="{'invisible':[('age','&gt;=',18)]}"/>
-                                <field name="martial_status" attrs="{'invisible':[('age','&lt;=',18)]}"/>
-                                <field name="partner_name" attrs="{'readonly':[('martial_status','!=','married')],
-                                                                    'required':[('martial_status','=','married')]}"/>
-                            </group>
+                    </group>
+                    <group string="Other Information" name="other_info">
+                        <group>
+                            <!-- Field required and invisible based on age with condition -->
+                            <field name="parent" attrs="{'invisible':[('age','&gt;=',18)]}"/>
+                            <field name="martial_status" attrs="{'invisible':[('age','&lt;=',18)]}"/>
+                            <field name="partner_name" attrs="{'readonly':[('martial_status','!=','married')],
+                                                                'required':[('martial_status','=','married')]}"/>
+                        </group>
+                        <group>
+                            <field name="phone" widget="phone" />
+                            <field name="email" widget="email" />
+                            <field name="website" widget="url" />
                         </group>
                     </group>
                 </sheet>
