--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -4,33 +4,34 @@
             <field name="name">hospital.patient.kanban</field>
             <field name="model">hospital.patient</field>
             <field name="arch" type="xml">
-                <kanban class="o_res_partner_kanban">
+                <kanban>
+                    <field name="id"/>
                     <field name="name"/>
                     <field name="date_of_birth"/>
-                    <field name="appointment_count"/>
+                    <field name="age"/>
+                    <field name="gender"/>
 	
-        <field name="email"/>
-                    <field name="mobile"/>
                     <templates>
-                        <t t-name="kanban-box">
-                            <div t-attf-class="oe_kanban_global_click">
-                                <div class="o_kanban_image">
-                                    <img alt="Avatar" t-att-src="kanban_image('res.partners', 'image_medium',record.id.raw_value)"/>
+                            <t t-name="kanban-box">
+                                <div t-attf-class="oe_kanban_global_click">
+                                    <div class="o_kanban_image">
+                                        <img alt="Avatar"
+                                        t-att-src="kanban_image('hospital.patient', 'avatar_128',record.id.raw_value)"/>
+                                    </div>
+                                    <div class="oe_kanban_details">
+                                        <t class="o_kanban_record_title">
+                                        <strong t-esc="record.name.value"/>
+                                        </t>
+                                        <div t-if="record.age.value">
+                                            <t t-esc="record.age.value"/>
+                                        </div>
+                                        <div t-if="record.gender.value">
+                                            <t t-esc="record.gender.value"/>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="oe_kanban_details">
-                                    <strong class="o_kanban_record_title">
-                                    <field name="display_name"/>
-                                    </strong>
-                                <div t-if="record.mobile.value">
-                                        <t t-esc="record.mobile.value"/>
-                                </div>
-                                    <div t-if="record.email.value">
-                                        <t t-esc="record.email.value"/>
-                                </div>
-                                </div>
-                            </div>
-                        </t>
-                    </templates>
+                            </t>
+                        </templates>
                 </kanban>
             </field>
         </record>
@@ -147,8 +148,8 @@
             <field name="name">Patients</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">hospital.patient</field>
-            <field name="view_mode">tree,form</field>
-            <!-- Search Default Filter and GroupBy => {'search_default_filter_name' : 1(true)} -->
+            <field name="view_mode">tree,form,kanban</field>
+            <!-- Search Default Filter and GroupBy => {'search_default_filter_nanameme' : 1(true)} -->
             <field name="context">{'search_default_filter_male':1, 'search_default_group_by_gender': 1}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
