--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -4,8 +4,9 @@
             <field name="name">hospital.patient.kanban</field>
             <field name="model">hospital.patient</field>
             <field name="arch" type="xml">
-                <kanban>
+                <kanban class="o_kanban_small_column o_kanban_project_tasks" on_create="quick_create" quick_create_view="project.quick_create_task_form" examples="project">
                     <field name="id"/>
+                    <field name="image"/>
                     <field name="name"/>
                     <field name="date_of_birth"/>
                     <field name="age"/>
@@ -16,7 +17,7 @@
                                 <div t-attf-class="oe_kanban_global_click">
                                     <div class="o_kanban_image">
                                         <img alt="Avatar"
-                                        t-att-src="kanban_image('hospital.patient', 'avatar_128',record.id.raw_value)"/>
+                                        t-att-src="kanban_image('hospital.patient', 'image',record.id.raw_value)"/>
                                     </div>
                                     <div class="oe_kanban_details">
                                         <t class="o_kanban_record_title">
