--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -118,6 +118,9 @@
                     <group>
                         <group>
                             <field name="patient_id" widget="selection"/>
+                            <!-- <field name="patient_id" widget="res_partner_many2one"
+                       context="{'res_partner_search_mode': 'customer', 'show_address': 1 }"
+                       options="{'always_reload': True}"/> -->
                             <!-- Force save for readonly -->
                             <field name="ref" readonly="1" force_save="1"/>
                             <field name="doctor_id" widget="many2one_avatar_user"/>
